--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"dev:css": "concurrently \"npm:generate:css:* -- --verbose --watch\"",
 		"dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
 		"format": "prettier --write .",
-		"generate:css:base": "postcss \"app/styles/**/*.scss\" --base app/styles --dir app/dist/styles --ext css",
-		"generate:css:routes": "postcss \"app/routes/**/*.scss\" --base app/routes --dir app/dist/styles/routes --ext css",
+		"generate:css:base": "postcss \"app/styles/**/*.(scss|css)\" --base app/styles --dir app/dist/styles --ext css --map",
+		"generate:css:routes": "postcss \"app/routes/**/*.(scss|css)\" --base app/routes --dir app/dist/styles/routes --ext css --map",
 		"lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
 		"setup:css": "cross-env NODE_ENV=development npm run build:css",
 		"setup:prisma": "prisma generate && prisma migrate deploy && prisma db seed",
