--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@remix-run/serve": "*",
 		"@remix-run/server-runtime": "*",
 		"bcryptjs": "^2.4.3",
+		"clsx": "^1.2.1",
 		"isbot": "^3.6.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
